<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.login.LoginFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/menu_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/Appbartitle"
            tools:title="@string/string_masuk"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorControlNormal"
            app:navigationIconTint="?attr/colorControlNormal"/>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        app:helperTextEnabled="true"
        tools:helperText="@string/string_helper_email"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/string_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColorHint="?attr/colorControlNormal"
            android:textColor="?attr/colorControlNormal"
            android:fontFamily="@font/poppins_medium"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        tools:helperText="@string/string_helper_password"
        app:layout_constraintTop_toBottomOf="@+id/et_email_input"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/string_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_edit_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColorHint="?attr/colorControlNormal"
            android:textColor="?attr/colorControlNormal"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_purple"
        android:fontFamily="@font/poppins_semibold"
        android:paddingTop="10dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        tools:text="@string/string_masuk"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginVertical="24sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_input" />

    <TextView
        android:id="@+id/tv_helper_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_helper_register"
        android:fontFamily="@font/poppins"
        android:textColor="?attr/colorControlNormal"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider_view_one"
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:background="@color/secondary_black"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_helper_register"
        app:layout_constraintBottom_toBottomOf="@+id/tv_helper_register"/>

    <View
        android:id="@+id/divider_view_two"
        android:layout_width="80dp"
        android:layout_height="1dp"
        android:background="@color/secondary_black"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/tv_helper_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_helper_register"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:paddingTop="10dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="24dp"
        tools:text="@string/string_daftar"
        android:textSize="14sp"
        android:textColor="@color/primary_purple"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_helper_register" />

    <TextView
        android:id="@+id/tv_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"/>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>