...
        android:layout_marginVertical="26dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_authentication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_skip_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_lewati"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:layout_marginStart="26dp"
...
